--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,5 +22,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="@string/bluetooth_btn_recv_pair"/>
+         <Button
+            android:id="@+id/btn_nrf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="nrf"/> 
     </LinearLayout>
 </LinearLayout>
